// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiButtonEmpty is rendered 1`] = `
<button
  aria-label="aria-label"
  class="ouiButtonEmpty ouiButtonEmpty--primary testClass1 testClass2"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`OuiButtonEmpty props color danger is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--danger"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props color ghost is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--ghost"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props color primary is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props color success is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--success"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props color text is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--text"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props color warning is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--warning"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props contentProps is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary"
  type="button"
>
  <span
    aria-label="aria-label"
    class="ouiButtonContent ouiButtonEmpty__content testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <span
      class="ouiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`OuiButtonEmpty props flush both is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary ouiButtonEmpty--flushBoth"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props flush left is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary ouiButtonEmpty--flushLeft"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props flush right is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary ouiButtonEmpty--flushRight"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props href secures the rel attribute when the target is _blank 1`] = `
<a
  class="ouiButtonEmpty ouiButtonEmpty--primary"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</a>
`;

exports[`OuiButtonEmpty props iconSide left is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonContent__icon"
      color="inherit"
      data-ouiicon-type="user"
    />
    <span
      class="ouiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`OuiButtonEmpty props iconSide right is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonContent--iconRight ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonContent__icon"
      color="inherit"
      data-ouiicon-type="user"
    />
    <span
      class="ouiButtonEmpty__text"
    >
      Content
    </span>
  </span>
</button>
`;

exports[`OuiButtonEmpty props iconType is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonContent__icon"
      color="inherit"
      data-ouiicon-type="user"
    />
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props isDisabled is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary ouiButtonEmpty-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props isDisabled renders a button even when href is defined 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary ouiButtonEmpty-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props isDisabled renders if passed simply as disabled 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary ouiButtonEmpty-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props isLoading is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary ouiButtonEmpty-isDisabled"
  disabled=""
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiLoadingSpinner ouiLoadingSpinner--medium ouiButtonContent__spinner"
    />
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props isSelected is rendered as false 1`] = `
<button
  aria-pressed="false"
  class="ouiButtonEmpty ouiButtonEmpty--primary"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props isSelected is rendered as true 1`] = `
<button
  aria-pressed="true"
  class="ouiButtonEmpty ouiButtonEmpty--primary"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props size l is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary ouiButtonEmpty--large"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props size s is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary ouiButtonEmpty--small"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props size xs is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary ouiButtonEmpty--xSmall"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      class="ouiButtonEmpty__text"
    />
  </span>
</button>
`;

exports[`OuiButtonEmpty props textProps is rendered 1`] = `
<button
  class="ouiButtonEmpty ouiButtonEmpty--primary"
  type="button"
>
  <span
    class="ouiButtonContent ouiButtonEmpty__content"
  >
    <span
      aria-label="aria-label"
      class="ouiButtonEmpty__text testClass1 testClass2"
      data-test-subj="test subject string"
    >
      Content
    </span>
  </span>
</button>
`;
